--- a/index.html
+++ b/index.html
@@ -1,43 +1,23 @@
 <!DOCTYPE html>
-
 <html>
-
-  <head>
-
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
-    <meta name="" content="">
-
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="" content="">
 <link rel="stylesheet" href="div.css">
-
-   </head>
-
-    <title>reza</title>
-
-  <body>
-
+</head>
+<title>reza</title>
+<body>
 <center>
-
-  
-
-  <div>
-
-    Box
-
-    
-
-  </div>
-
-  
-
+<div>
+Box
+</div>
 <p>
-
- M.Reza     <br>  <br>
-
+M.Reza<br><br>
 </p>
-
 </center>
+<script>
+aleart("ok")
+</script>
 
-  </body>
-
+</body>
 </html>
