--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta name="" content="">
-<link rel="stylesheet" href="div.css">
+
 </head>
 <title>reza</title>
 <body>
-<center>
-<div>
-Box
-</div>
+<h1>
+Wellcome</h1>
 <p>
-M.Reza<br><br>
+M.Reza
 </p>
-</center>
+
+
 <script>
 alert("ok")
 </script>
