--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
 </head>
 <title>reza</title>
 <body>
-<h1>
+<h1 style="padding : 30px ; font-color : red ; font-size : 50px">
 Wellcome</h1>
+
 <p>
 M.Reza
 </p>
 
-
 <script>
-alert("ok")
+
+//alert("ok")
+
 </script>
 
 </body>
