--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 
 </head>
 <title>reza</title>
-<body>
-<h1 style="padding : 30px ; font-color : red ; font-size : 50px">
+<body style="background-color : #d3c1f8">
+<h1 style="padding : 40px ; font-color : #00ffc8 ; font-size : 50px">
 Wellcome</h1>
-
-<p>
+<p style="padding : 60px ; font-size : 100px">
 M.Reza
 </p>
 
