--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
 </head>
 <title>reza</title>
 <body style="background-color : #d3c1f8">
-<h1 style="padding : 40px ; font-color : #00ffc8 ; font-size : 50px">
+  
+  <div style="border : 10px ; padding : 70px ; background-color: #34d909">
+<h1 style="font-color : #00ffc8 ; font-size : 50px">
 Wellcome</h1>
-<p style="padding : 60px ; font-size : 100px">
+<p style="font-size : 100px">
 M.Reza
 </p>
+  
+</div>
 
 <script>
 
