--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- theme designed by https://blacktheme.ir  | Weblog Themes & code for Weblog -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title><-BlogAndPostTitle-></title>
+<title>mrg reza</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="content-language" content="fa">
 <meta name="description" content="<-BlogMetaDescription->">
@@ -69,9 +69,8 @@
           </div>
         </BlogPhoto>
         <div class="blackthemeInfoUrl">
-          <h1><a href="<-BlogUrl->">
-              <-BlogTitle->
-            </a></h1>
+          <h1>
+            Reza web</h1>
           <h2>
             <-BlogDescription->
           </h2>
