--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h1>
             Reza web</h1>
           <h2>
-            <-BlogDescription->
+           My site (git hob)
           </h2>
         </div>
 
@@ -140,13 +140,8 @@
               </li>
               <li>
                 <h2><a href="#">زیرموضوع دو</a></h2>
-              </li>
-              <li>
-                <h2><a href="#">زیرموضوع سه</a></h2>
-              </li>
-              <li>
-                <h2><a href="#">زیرموضوع چهار</a></h2>
-              </li>
+              </lli
+ 
             </ul>
           </li>
   
@@ -532,7 +527,7 @@
                       </g>
                     </svg></h6>
                   <ul>
-                    <BlogLinks>
+                    بلاگ لینک
                       <li><a href="<-LinkUrl->" target="_blank" class="blackthemeElement">
                           <-LinkTitle->
                         </a></li>
@@ -585,7 +580,7 @@
   </div>
   <footer>
     <div class="blackthemeBox blackthemePadding">
-      قالب طراحی شده توسط <h2><a href="http://blacktheme.ir/" title="قالب وبلاگ و کد وبلاگ" rel="nofollow" >mrg_reza</a></h2>
+   طراحی شده توسط <h2><a href="http://blacktheme.ir/" title="قالب وبلاگ و کد وبلاگ" rel="nofollow" >mrg_reza</a></h2>
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
