--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
       <div class="blackthemeInfo">
      
         <div class="blackthemeInfoUrl">
-          <h1>
+      <Center>
+    <h1>
             Reza web</h1>
+
           <h2>
            My site (git hob)
           </h2>
+</Center>
         </div>
 
       </div>
