--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
             </ul>
           </li>
   
-          <li>
-            <h2><a href="#" class="blackthemeElement">موضـوع دو</a></h2>
+          
+<li>
+            <h2><a href="#" class="blackthemeElement">موضـوع اصلی</a></h2>
             <ul class="blackthemeBoxShadow">
               <li>
                 <h2><a href="#">زیرموضوع یک</a></h2>
@@ -140,12 +141,11 @@
               <li>
                 <h2><a href="#">زیرموضوع دو</a></h2>
               </li>
- 
+              <li>
+                <h2><a href="#">زیرموضوع سه</a></h2>
+              </li>
             </ul>
           </li>
- 
-
-
              
 
 
