--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
   
               <BlogLinksBlock>
                 <div class="blackthemeSideBox blackthemeBoxShadow">
-                  <h6>دوستان<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                  <h6>مورد علاقه<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                       aria-hidden="true" focusable="false" width="1em" height="1em"
                       style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);"
                       preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
